edit layout paket

--- a/penidahalfdaytimur.html
+++ b/penidahalfdaytimur.html
@@ -99,9 +99,9 @@
     <section class="blog-posts grid-system">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
+                <div class="">
                     <div>
-                        <img src="assets/images/penida4.jpg" alt="" class="img-fluid wc-image">
+                        <!-- <img src="assets/images/penida4.jpg" alt="" class="img-fluid wc-image"> -->
                     </div>
 
                     <br>
@@ -165,62 +165,7 @@
                             </p>
                         </div>
                     </div>
-
                     <br>
-                    <br>
-
-                    <div class="sidebar-item recent-posts">
-                        <div class="sidebar-heading">
-                            <h2>Contact Details</h2>
-                        </div>
-
-                        <div class="content">
-                            <p>
-                                <span>Name</span>
-
-                                <br>
-
-                                <strong>John Smith</strong>
-                            </p>
-
-                            <p>
-                                <span>Phone</span>
-
-                                <br>
-
-                                <strong>
-                    <a href="tel:123-456-789">123-456-789</a>
-                  </strong>
-                            </p>
-
-                            <p>
-                                <span>Mobile phone</span>
-
-                                <br>
-
-                                <strong>
-                    <a href="tel:456789123">456789123</a>
-                  </strong>
-                            </p>
-
-                            <p>
-                                <span>Email</span>
-
-                                <br>
-
-                                <strong>
-                    <a href="mailto:john@carsales.com">john@carsales.com</a>
-                  </strong>
-                            </p>
-                        </div>
-                    </div>
-
-                    <br>
-
-                    <div class="main-button">
-                        <a href="#" data-toggle="modal" data-target="#exampleModal">Enquiry</a>
-                    </div>
-
                     <br>
                 </div>
             </div>
@@ -304,9 +249,6 @@
                         </table>
                     </div>
                 </div>
-
-                <br>
-                <br>
             </div>
 
             <div class="sidebar-item recent-posts">
@@ -383,6 +325,59 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+
+            <br>
+            <div class="sidebar-item recent-posts">
+                <div class="sidebar-heading">
+                    <h2>Contact Details</h2>
+                </div>
+
+                <div class="content">
+                    <p>
+                        <span>Name</span>
+
+                        <br>
+
+                        <strong>John Smith</strong>
+                    </p>
+
+                    <p>
+                        <span>Phone</span>
+
+                        <br>
+
+                        <strong>
+            <a href="tel:123-456-789">123-456-789</a>
+          </strong>
+                    </p>
+
+                    <p>
+                        <span>Mobile phone</span>
+
+                        <br>
+
+                        <strong>
+            <a href="tel:456789123">456789123</a>
+          </strong>
+                    </p>
+
+                    <p>
+                        <span>Email</span>
+
+                        <br>
+
+                        <strong>
+            <a href="mailto:john@carsales.com">john@carsales.com</a>
+          </strong>
+                    </p>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="main-button">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">Enquiry</a>
             </div>
 
             <br>
