--- a/penidahalfday.html
+++ b/penidahalfday.html
@@ -99,9 +99,9 @@
     <section class="blog-posts grid-system">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
+                <div class="">
                     <div>
-                        <img src="assets/images/penida-1.jpg" alt="" class="img-fluid wc-image">
+                        <!-- <img src="assets/images/penida-1.jpg" alt="" class="img-fluid wc-image"> -->
                     </div>
 
                     <br>
